Изменил положение кнопок в главном окне Заготовил ClientVM под окно для взаимодействия с клиентом (удалить изменить) В Application теперь подклбчение к БД из json файла.

--- a/PrototypeBankSystem.Presentation/View/MainWindow.xaml
+++ b/PrototypeBankSystem.Presentation/View/MainWindow.xaml
@@ -48,7 +48,8 @@
                 BorderBrush="White"
                 Width="auto"
                 Height="auto"
-                Grid.Column="1"
+                Grid.Column="3"
+                Grid.Row="1"
                 Command="{Binding TransferMoneyButton}">
             <StackPanel Width="auto"
                         Height="auto">
@@ -79,7 +80,7 @@
                 BorderBrush="White"
                 Width="auto"
                 Height="auto"
-                Grid.Row="1"
+                Grid.Column="1"
                 Command="{Binding GiveCreditButton}">
             <StackPanel Width="auto"
                         Height="auto">
@@ -100,7 +101,7 @@
                         Height="auto">
                 <Image Source="/Resources/client.jpg"
                    Height="70"/>
-                <TextBlock Text="Debug панель" Foreground="Black" FontFamily="Yu Gothic UI Light" FontWeight="Normal" FontStyle="Italic" FontSize="24"/>
+                <TextBlock Text="Внесение изменений" Foreground="Black" FontFamily="Yu Gothic UI Light" FontWeight="Normal" FontStyle="Italic" FontSize="24"/>
             </StackPanel>
         </Button>
 
@@ -109,7 +110,6 @@
                 BorderBrush="White"
                 Width="auto"
                 Height="auto"
-                Grid.Column="2"
                 Grid.Row="1"
                 Command="{Binding AddCardClient}">
             <StackPanel Width="auto"
