подправил клиентскую часть

--- a/PrototypeBankSystem.Presentation/View/ManagmentClient.xaml
+++ b/PrototypeBankSystem.Presentation/View/ManagmentClient.xaml
@@ -23,6 +23,7 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
         <StackPanel Orientation="Horizontal"
@@ -30,7 +31,7 @@
                     Margin="10"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center">
-            <TextBlock Text="Debug панель | Текущее время: " 
+            <TextBlock Text="Управление клиентами" 
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center"
                        Grid.ColumnSpan="2"
@@ -40,7 +41,31 @@
                        FontStyle="Italic"
                        FontSize="24"
                        Margin="0 0 10 0"/>
-            <TextBlock Text="{Binding Path=CurrentTime, StringFormat=dd-MM-yyyy, UpdateSourceTrigger=PropertyChanged}"
+        </StackPanel>
+
+        <DataGrid 
+            Grid.Row="1"
+            Grid.ColumnSpan="2"
+            HorizontalAlignment="Center"
+            AutoGenerateColumns="False"
+            VerticalAlignment="Top"
+            ItemsSource="{Binding ListViewClient, UpdateSourceTrigger=PropertyChanged}"
+            SelectedItem="{Binding SelectedClient, UpdateSourceTrigger=PropertyChanged}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Фамилия" Binding="{Binding LastName}"/>
+                <DataGridTextColumn Header="Имя" Binding="{Binding FirstName}"/>
+                <DataGridTextColumn Header="Отчество" Binding="{Binding SurName}"/>
+                <DataGridTextColumn Header="Возраст" Binding="{Binding Age}"/>
+                <DataGridTextColumn Header="Телефон" Binding="{Binding NumberPhone}"/>
+                <DataGridTextColumn Header="Привилегия" Binding="{Binding Privilege}"/>
+            </DataGrid.Columns>
+        </DataGrid>
+
+        <StackPanel Grid.Row="2"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Top">
+
+            <TextBlock Text="Управление клиентами" 
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center"
                        Grid.ColumnSpan="2"
@@ -48,127 +73,35 @@
                        FontFamily="Yu Gothic UI Light"
                        FontWeight="Normal" 
                        FontStyle="Italic"
-                       FontSize="24"/>
+                       FontSize="24"
+                       Margin="0 0 10 0"/>
+
         </StackPanel>
-        <StackPanel Grid.Row="1"
-                    Grid.Column="1"
+        
+        <StackPanel Grid.Column="1"
+                    Grid.Row="2"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top">
 
-            <TextBlock Text="Присылаемые сообщения клиентам" 
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center"
-                   Margin="10"
-                   Grid.ColumnSpan="2"
-                   Foreground="Black" 
-                   FontFamily="Yu Gothic UI Light"
-                   FontWeight="Normal" 
-                   FontStyle="Italic"
-                   FontSize="20"/>
-
-            <ListView HorizontalAlignment="Center"
-                      VerticalAlignment="Top"
-                      ItemsSource="{Binding ListViewClient, UpdateSourceTrigger=PropertyChanged}"
-                      SelectedItem="{Binding SelectedClient, UpdateSourceTrigger=PropertyChanged}">
-                <ListView.View>
-                    <GridView>
-                        <GridViewColumn Header="Фамилия" DisplayMemberBinding="{Binding LastName}"/>
-                        <GridViewColumn Header="Сообщение"/>
-                    </GridView>
-                </ListView.View>
-            </ListView>
-
-        </StackPanel>
-
-        <StackPanel Grid.Row="1"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Top">
-
-            <TextBlock Text="Тестовые настрйоки" 
+            <TextBlock Text="Управление клиентами" 
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center"
-                       Margin="10"
                        Grid.ColumnSpan="2"
                        Foreground="Black" 
                        FontFamily="Yu Gothic UI Light"
                        FontWeight="Normal" 
                        FontStyle="Italic"
-                       FontSize="20"/>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Добавить денег" 
-                           HorizontalAlignment="Center"
-                           VerticalAlignment="Center"
-                           Margin="20 10 20 0"
-                           Grid.ColumnSpan="2"
-                           Foreground="Black" 
-                           FontFamily="Yu Gothic UI Light"
-                           FontWeight="Normal" 
-                           FontStyle="Italic"
-                           FontSize="18"/>
+                       FontSize="24"
+                       Margin="0 0 10 0"/>
 
-                <TextBox materialDesign:HintAssist.Hint="от 5 000"
-                         Style="{StaticResource MaterialDesignDataGridTextColumnEditingStyle}"
-                         Height="25"
-                         Width="100"
-                         Margin="0 10 20 0"
-                         Text="{Binding TextSumCredit}"/>
-            </StackPanel>
-
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Погасить все кредиты:" 
-                           HorizontalAlignment="Center"
-                           VerticalAlignment="Center"
-                           Margin="20 10 20 0"
-                           Grid.ColumnSpan="2"
-                           Foreground="Black" 
-                           FontFamily="Yu Gothic UI Light"
-                           FontWeight="Normal" 
-                           FontStyle="Italic"
-                           FontSize="18"/>
-                
-                
-
-                <CheckBox HorizontalAlignment="Center"
-                           VerticalAlignment="Center"
-                           Margin="20 10 20 0"
-                           Grid.ColumnSpan="2"
-                           Foreground="Black" 
-                           FontFamily="Yu Gothic UI Light"
-                           FontWeight="Normal" 
-                           FontStyle="Italic"
-                           FontSize="18"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Закрыть все вклады:" 
-                           HorizontalAlignment="Center"
-                           VerticalAlignment="Center"
-                           Margin="20 10 20 0"
-                           Grid.ColumnSpan="2"
-                           Foreground="Black" 
-                           FontFamily="Yu Gothic UI Light"
-                           FontWeight="Normal" 
-                           FontStyle="Italic"
-                           FontSize="18"/>
-
-                <CheckBox HorizontalAlignment="Center"
-                           VerticalAlignment="Center"
-                           Margin="20 10 20 0"
-                           Grid.ColumnSpan="2"
-                           Foreground="Black" 
-                           FontFamily="Yu Gothic UI Light"
-                           FontWeight="Normal" 
-                           FontStyle="Italic"
-                           FontSize="18"/>
-
-            </StackPanel>
-            
         </StackPanel>
+
 
         <StackPanel Grid.ColumnSpan="2"
-                    Grid.Row="2"
+                    Grid.Row="3"
                     HorizontalAlignment="Stretch"
                     VerticalAlignment="Bottom">
-            <Button Content="5 дней спустя..."
+            <Button Content="Сохранить и выйти"
                     Style="{StaticResource MaterialDesignFlatButton}" Foreground="#FF673AB7"
                     Width="Auto"
                     Height="Auto"
